# poetry-rai

./: .gitignore  pyproject.toml
poetry_rai/: raiwidgets_example.py
poetry_rai/config/: settings.py
poetry_rai/data/: data_paths.py  titanic_eval.csv  titanic_train.csv  titanic_val.csv
poetry_rai/train/: train.py
poetry_rai/utils/: generator_html.py  generator_pdf.py
