[tool.poetry]
name = "poetry-rai"
version = "0.1.0"
description = ""
authors = ["eduardo.zapata <eduardo.zapata@wayops.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "<1.3.0"
raiwidgets = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
